--- a/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
+++ b/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
     <title>Schueler</title>
-    <link href="schuelerdaten.css" rel="stylesheet" type="text/css" />
+    <link href="map.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="map.js"></script>
 </head>
 <body>
-    <section id="mapPlaceholder"></section>
-    <section><canvas id="myCanvas"></canvas></section>
     <button onclick="initMap()"></button>
-
+    <section id="mapPlaceholder" ></section>
+ 
 </body>
 </html>
