dal for sdo, added sdo manager, coordinates dynamically

--- a/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
+++ b/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
@@ -7,9 +7,10 @@
     <link href="map.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="data.js"></script>
+
 </head>
 <body>
-    <button onclick="initMap()"></button>
     <section id="mapPlaceholder" ></section>
  
 </body>
