--- a/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
+++ b/LagerVerwaltung/LagerVerwaltung/ScriptAndPages/Map.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
     <title>Schueler</title>
     <link href="map.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script type="text/javascript" src="map.js"></script>
-    <script type="text/javascript" src="data.js"></script>
-
+    <script type="text/javascript" src="init.js"></script>
 </head>
-<body>
-    <section id="mapPlaceholder" ></section>
- 
+<body >
+    <section id="mapPlaceholder"></section>
+    <section><canvas id="myCanvas"></canvas></section>
+    <button onclick="initMap()"></button>
+    <section onload="initMap();"></section>
 </body>
 </html>
